--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 requests>=2.27.1
-numpy>=1.14.0
+numpy==1.26.4
 pandas>=0.23.4
 gdown>=3.10.1
 tqdm>=4.30.0
 Pillow>=5.2.0
 opencv-python>=4.5.5.64
-tensorflow>=1.9.0
-keras>=2.2.0
+# tensorflow-rocm is installed from wheel URL in install_rocm.sh
+tf-keras
 Flask>=1.1.2,<=2.0.2
 werkzeug<=2.0.2
 flask_cors>=4.0.1
